--- a/ContainerService.Contracts/ContainerService.Contracts.csproj
+++ b/ContainerService.Contracts/ContainerService.Contracts.csproj
@@ -4,6 +4,11 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Title>ContainerService.Contracts</Title>
+        <Authors>nikitaberezhko</Authors>
+        <RepositoryUrl>https://github.com/nikitaberezhko/Logistic-ContainerService.Contracts</RepositoryUrl>
+        <Version>1.1.0</Version>
     </PropertyGroup>
 
 </Project>
